feat: add insert user

--- a/front-end/cadastro.html
+++ b/front-end/cadastro.html
@@ -21,8 +21,31 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
 
-    <button type="submit">Cadastrar</button>
+    <button type="submit" onclick="saveUser()">Cadastrar</button>
 </form>
+<script>
+    function saveUser() {
+        const firstName = document.getElementById('firstName').value;
+        const lastName = document.getElementById('lastName').value;
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
 
+        fetch('http://localhost:3000/api/v1/users', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({firstName, lastName, username, password}),
+        })
+            .then(response => response.json())
+            .then(data => {
+                console.log('Usuário cadastrado com sucesso:', data);
+                // Aqui você pode redirecionar o usuário para outra página, exibir uma mensagem, etc.
+            })
+            .catch(error => {
+                console.error('Erro ao cadastrar usuário:', error);
+            });
+    }
+</script>
 </body>
 </html>
