--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Pagina Inicial</title>
 </head>
 <body>
-<form>
-    <label for="username">Usuário:</label>
-    <input type="text" id="username" name="username" required>
-
-    <label for="password">Senha:</label>
-    <input type="password" id="password" name="password" required>
-
-    <button type="submit">Entrar</button>
-</form>
-
-<p>Não tem uma conta? <a href="cadastro.html">Cadastrar-se</a></p>
+    <h1>Index</h1>
 </body>
 </html>
