feat: create index file

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Pagina Inicial</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Cadastro de Produto</title>
 </head>
 <body>
-    <h1>Index</h1>
+
+<div class="container">
+    <h1>Cadastro de Produto</h1>
+    <form id="productForm">
+        <label for="productName">Nome do Produto:</label>
+        <input type="text" id="productName" name="productName" required>
+
+        <label for="productPrice">Preço:</label>
+        <input type="number" id="productPrice" name="productPrice" step="0.01" required>
+
+        <label for="productDescription">Descrição:</label>
+        <textarea id="productDescription" name="productDescription" required></textarea>
+
+        <button type="submit">Cadastrar Produto</button>
+    </form>
+</div>
+
+<script src="index.js"></script>
 </body>
 </html>
