fix: resolve fetch api bug

--- a/front-end/login.html
+++ b/front-end/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="login-style.css">
 </head>
 <body>
-<form>
+<form id="login-form">
     <div id="error-container"></div>
     <br>
     <label for="username">Usuário:</label>
@@ -16,7 +16,7 @@
     <label for="password">Senha:</label>
     <input type="password" id="password" name="password" required>
 
-    <button type="submit" onclick="login()">Entrar</button>
+    <button type="submit">Entrar</button>
 
     <p align="center">Não tem uma conta? <a href="cadastro.html">Cadastrar-se</a></p>
 </form>
