--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,18 +10,36 @@
 
 <div class="container">
     <h1>Cadastro de Produto</h1>
-    <form id="productForm">
-        <label for="productName">Nome do Produto:</label>
-        <input type="text" id="productName" name="productName" required>
 
-        <label for="productPrice">Preço:</label>
-        <input type="number" id="productPrice" name="productPrice" step="0.01" required>
+    <form id="product-form">
+        <label for="name">Nome do Produto:</label>
+        <input type="text" id="name" name="name" required>
 
-        <label for="productDescription">Descrição:</label>
-        <textarea id="productDescription" name="productDescription" required></textarea>
+        <label for="price">Preço:</label>
+        <input type="number" id="price" name="price" step="0.01" required>
+
+        <label for="description">Descrição:</label>
+        <textarea id="description" name="description" required></textarea>
 
         <button type="submit">Cadastrar Produto</button>
     </form>
+
+    <br>
+    <br>
+
+    <h2>Lista de Produtos</h2>
+    <table id="productTable">
+        <thead>
+        <tr>
+            <th>Nome</th>
+            <th>Preço</th>
+            <th>Descrição</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Os dados da tabela serão inseridos aqui -->
+        </tbody>
+    </table>
 </div>
 
 <script src="index.js"></script>
