feat: add goback button

--- a/front-end/cadastro.html
+++ b/front-end/cadastro.html
@@ -22,6 +22,9 @@
     <input type="password" id="password" name="password" required>
 
     <button type="submit" onclick="saveUser()">Cadastrar</button>
+    <br>
+    <br>
+    <button onclick="goToLogin()">Voltar para o Login</button>
 </form>
 <script src="cadastrar.js"></script>
 
